# goose

./: CONTRIBUTING.md  CUSTOM_DISTROS.md  Cargo.toml  Justfile  OCTOCODE_ARCHMAP.md  OCTOCODE_CHROME_DESIGN.md  OCTOCODE_HANDOFF.md  OCTOCODE_LOG.md  OCTOCODE_PLUGIN_DESIGN.md  OCTOCODE_PROMPT.md  OCTOCODE_SPEC.md  docs-audit-findings.md  mcp-server-inventory.md  mcp-smoke-results.md
.github/workflows/: bundle-desktop-intel.yml  bundle-desktop.yml  canary.yml  ci.yml  python-sdk-wheels.yml
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json  config.schema.json
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-local-inference/: Cargo.toml
crates/goose-mcp/src/: subprocess.rs
crates/goose-models-db/: Cargo.toml
crates/goose-models-db/src/: lib.rs
crates/goose-provider-types/: Cargo.toml
crates/goose-provider-types/src/: formats.rs  images.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: base.rs  (+5 more)
crates/goose-router/: Cargo.toml  README.md
crates/goose-router/src/: embedding.rs  ladder.rs  lib.rs  render.rs
crates/goose-router/tests/: embedding_parity.rs  route_decision.rs
crates/goose-sdk/: .gitignore  Cargo.toml  README.md  justfile
crates/goose-types/: Cargo.toml
documentation/static/: servers.json
flatpak/: README.md
mobile-client/: .gitignore  Package.swift  README.md
mobile-client/share-sidecar/: Cargo.toml  README.md
mobile-client/share-sidecar/src/: main.rs
scripts/: build-windows.ps1  mcp-smoke-check.js
ui/: pnpm-lock.yaml
ui/desktop/: README.md  openapi.json  package.json
(+283 files in other folders)
