[package]
name = "goose-acp-share"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hmac = "0.13.0"
iroh = "1.0.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"

[workspace]
